Added styling and redux project files

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     ]
   },
   "prettier": {
-    "printWidth": 120
+    "printWidth": 120,
+    "tabWidth": 4
   },
   "browserslist": {
     "production": [
